Secure smtp credentials and add github actions cicd

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-app.mail.from=no-reply@pmt.local
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=PMTIscodWilliam@gmail.com
-spring.mail.password=oujo nyvf mpgi jmqm
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=${APP_MAIL_FROM:no-reply@pmt.local}
+spring.mail.host=${SPRING_MAIL_HOST:}
+spring.mail.port=${SPRING_MAIL_PORT:}
+spring.mail.username=${SPRING_MAIL_USERNAME:}
+spring.mail.password=${SPRING_MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_STARTTLS:true}
